# Vector3D

./: CMakeLists.txt  Matrix.cpp  Matrix.h  Matrix.hpp  README.md  Vector3D.cpp  Vector3D.h  Vector3D.hpp  library.json  qr-decom.py
.cache/clangd/index/: Matrix.hpp.B9C1D36F0ACA1714.idx  matrix-tests.cpp.88D512D6040A12A3.idx
src/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Quaternion.cpp  Quaternion.h  Vector3D.cpp  Vector3D.hpp
src/Matrix/: CMakeLists.txt  Matrix.cpp  Matrix.hpp
src/Quaternion/: CMakeLists.txt  Quaternion.cpp  Quaternion.h
src/Quaternion/unit-tests/: quaternion-tests.cpp
src/Vector3D/: CMakeLists.txt
unit-tests/: .gitignore  CMakeLists.txt  matrix-test-timings.txt  matrix-tests.cpp  quaternion-tests.cpp  run-matrix-timing-test.sh  test-timing-post-process.py  vector-tests.cpp
